--- a/microservices-app/user-service/package.json
+++ b/microservices-app/user-service/package.json
@@ -21,6 +21,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
+    "node": "^20.19.6",
+    "nodemon": "^3.1.11",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   }
